GitHub issue#1990 1.Removed extra space on right from project-grid in mobile view. 2.Removed extra space between the filter drop-down and the list.

--- a/src/projects/list/components/Projects/ProjectListNavHeader.scss
+++ b/src/projects/list/components/Projects/ProjectListNavHeader.scss
@@ -16,7 +16,7 @@
     }
 
     @media screen and (max-width: $screen-sm - 1px) {
-      margin: 0 0 4 * $base-unit 0;
+      margin: 0 0 $base-unit 0;
     }
 
     .left-wrapper {
